# Tongji-EasyAPI

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  __init__.pyi  __version__.py  captchaVerification.txt  function.py  models.py  networkTools.py  offlineCaptcha.py  pyproject.toml  result.txt  session.py  session.pyi  setup.py  test.py  verifyTools.py  verifyTools.pyi
docs/: README.md  SUMMARY.md  session.md
sample/: Tongji-1api.postman_collection.json  back.html  back2.html  herf.html
src/EasyTongjiAPI/: __version__.py  models.py  session.py  verifyTools.py
src/easyTongjiAPI/: __init__.py  crack.py  function.py  function.pyi  models.py  models.pyi  networkTools.py  offlineCaptcha.py  session.py  session.pyi  verifyTools.py  verifyTools.pyi
src/easyTongjiapi/: __version__.py  crack.py  crack.pyi  models.py  models.pyi  networkTools.py  session.py
src/easyTongjiapi/web/: index.html
web/: index.html
