[build-system]
requires = ["setuptools>=51.0"]
build-backend = "setuptools.build_meta"

# [project]
# name = "easyTongjiapi"
# version = "0.0.1"
# authors = [
#   { name="Cinea Zhan", email="cinea@cinea.com.cn" },
# ]
# description = "Easy Tongji 1-System API for everyone."
# readme = "README.md"
# license = { file="LICENSE" }
# requires-python = ">=3.7"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
#     "Operating System :: OS Independent",
#     "Development Status :: 2 - Pre-Alpha",
#     "Natural Language :: Chinese (Simplified)"
# ]

# [project.urls]
# "Homepage" = "https://github.com/Cinea4678/Tongji-EasyAPI"
# "Bug Tracker" = "https://github.com/Cinea4678/Tongji-EasyAPI/issues"